**Fixed description overlap at studio/detail**

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,7 +87,7 @@ nav ul li{
 	background: #3C3F58;
 	border-radius: 2em;
 	width: 100%;
-	height: 500px;
+	min-height: 500px;
 	margin: 2.5em auto;
 	overflow:hidden;
 	position: relative;
@@ -169,4 +169,3 @@ footer{
 	height: 2.5em;
 	line-height: 2.5em;
 }
-
